# gitnotes

./: .gitignore  Cargo.toml  README.md  README_DEB.txt  build_deb.sh  clean_repository.sh  install_deb.sh
.github/workflows/: rust.yml
completions/: gitnotes.bash
src/: app.rs  app_tests.rs  command.rs  config.rs  editor.rs  git_helpers.rs  helpers.rs  interactive.rs  main.rs  markdown.rs  model.rs  querying.rs  snippets.rs  tags.rs  web_editor.rs
templates/: webEditor.html
webeditor/: .gitignore  build_js.sh  package.json  prod.webpack.config.js  webpack.config.js
webeditor/scripts/: helpers.js  helpers.tsx  webeditor.js  webeditor.tsx
webeditor/static/: webeditor.js  webeditor.js.LICENSE.txt
webeditor/static/stylesheets/: main.css
