[package]
name = "gitnotes-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.40"
chrono = { version = "0.4", features=["serde"] }
rand = "0.8"
fnv = "1"
regex = "1"

structopt = "0.3"
rustyline = "11.0"
rustyline-derive = "0.8"

serde = { version = "1", features=["derive"] }
toml = "0.7"

git2 = "0.17"
comrak = "0.18"
tempfile = "3"
libc = "0.2"
crossterm = "0.26"
atty = "0.2"