[package]
name = "gitnotes"
version = "0.1.0"
authors = ["Anton Jansson <anton_jansson@live.se>"]
edition = "2021"
description = "CLI & Git based notes/snippet application"
license = "MIT"
homepage = "https://github.com/svenslaggare/gitnotes"

[dependencies]
thiserror = "1.0.40"
chrono = { version = "0.4", features=["serde"] }
rand = "0.8"
fnv = "1"
regex = "1"
lazy_static = "1"
float-ord = "0.3"

structopt = "0.3"
rustyline = "12.0"
rustyline-derive = "0.9"
shellwords = "1"

serde = { version = "1", features=["derive"] }
toml = "0.7"
serde_json = "1"

git2 = "0.17"
comrak = "0.18"
tempfile = "3"
libc = "0.2"
crossterm = "0.26"
atty = "0.2"
home = "0.5"

rake = "0.3"

axum = "0.6"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["fs"] }
askama = "0.12"