[package]
name = "gitnotes"
version = "0.1.0"
authors = ["Anton Jansson <anton_jansson@live.se>"]
edition = "2021"
description = "CLI & Git based notes/snippet application"
license = "MIT"
homepage = "https://github.com/svenslaggare/gitnotes"
default-run = "gitnotes"
readme = "README.md"

[package.metadata.deb]
assets = [
    ["target/release/gitnotes", "usr/bin/gitnotes", "755"],
    ["webeditor/static/**/*", "etc/gitnotes/static", "644"],
    ["completions/gitnotes.bash", "etc/bash_completion.d/gitnotes", "644"]
]

[dependencies]
thiserror = "2"
chrono = { version = "0.4", features=["serde"] }
rand = "0.8"
fnv = "1"
regex = "1"
lazy_static = "1"
float-ord = "0.3"
substring = "1"
globset = "0.4"

structopt = "0.3"
rustyline = "12.0"
rustyline-derive = "0.9"
shellwords = "1"

serde = { version = "1", features=["derive"] }
toml = "0.8"
serde_json = "1"

git2 = "0.20"
comrak = "0.33"
tempfile = "3"
libc = "0.2"
crossterm = "0.28"
home = "0.5"
rake = "0.3"

axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
askama = "0.12"
open = "5"